Fixed problem with div overlapping checkboxes in Checkboxes designer

--- a/Telerik.Sitefinity.Frontend/assets/src/sass/bootstrap/_list-group.sass
+++ b/Telerik.Sitefinity.Frontend/assets/src/sass/bootstrap/_list-group.sass
@@ -94,7 +94,8 @@
 		border-color: #ddd
 	>div
 		margin-right: 0
-		padding-left: 37px
+		margin-left: 37px
+		padding-left: 0
 
 //Add new item link/button
 
